--- a/NeaProject/_Imports.razor
+++ b/NeaProject/_Imports.razor
@@ -7,5 +7,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using NeaProject
-@using SkiaSharp
-@using SkiaSharp.Views.Blazor
+@using NeaProject.Shared
