--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -17,31 +17,31 @@
 <div style="background-color:#559">
     <table class="table-center">
         <tr>
-            <td style="width:16%; height:128px" rowspan="2">wooa</td>
+            <td style="width:16%;" rowspan="2">wooa</td>
             <td rowspan="2">woob</td>
             <td style="width:8%">wooc</td>
-            <td style="width:8%">wood</td>
+            <td class="stat" style="width:8%">wood</td>
         </tr>
         <tr>
             <td>wooe</td>
-            <td>woof</td>
+            <td class ="stat">woof</td>
         </tr>
         <tr>
-            <td style="height:128px;" rowspan="4">woo</td>
-            <td>woo</td>
-            <td rowspan="2">woo</td>
-            <td rowspan="2">woo</td>
+            <td rowspan="4"><img src="/images/player1.png" style="width:100%" /></td>
+            <td>wooh</td>
+            <td rowspan="2">wooi</td>
+            <td class="stat" rowspan="2">HP: @player.CurrentHp</td>
         </tr>
         <tr>
-            <td>woo</td>
+            <td>wook</td>
         </tr>
         <tr>
-            <td>woo</td>
-            <td rowspan="2">woo</td>
-            <td rowspan="2">woo</td>
+            <td>wool</td>
+            <td rowspan="2">woom</td>
+            <td class="stat" rowspan="2">woon</td>
         </tr>
         <tr>
-            <td>woo</td>
+            <td>wooo</td>
         </tr>
     </table>
 </div>
@@ -58,8 +58,9 @@
     const int WolfViewportHeight = 160 * WolfViewportZoom;
 
     private static readonly Map map = new Map();
+    private static readonly Player player = new Player(Map.Height/2, Map.Width/2);
     private readonly FpsCounter _fpsCounter = new FpsCounter();
-    private readonly Renderer _renderer = new Renderer(map, WolfViewportWidth, WolfViewportHeight);
+    private readonly Renderer _renderer = new Renderer(map, player, WolfViewportWidth, WolfViewportHeight);
     private readonly SKBitmap _bitmap = new SKBitmap(WolfViewportWidth, WolfViewportHeight);
     
     protected void OnPaintSurface(SKPaintSurfaceEventArgs e)
