--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -14,6 +14,7 @@
         </div>
     </div>
 </div>
+
 <div style="background-color:#559">
     <table class="table-center">
         <tr>
@@ -46,6 +47,14 @@
     </table>
 </div>
 
+<div>
+    <button
+        @ref="buttonRef"
+        class="massive-invisible-button"
+        @onkeydown="KeyDown">
+        Pressed Key: @(lastPressed ?? "Nothing pressed yet")
+    </button>
+</div>
 
 
 @code {
@@ -58,10 +67,66 @@
     const int WolfViewportHeight = 160 * WolfViewportZoom;
 
     private static readonly Map map = new Map();
-    private static readonly Player player = new Player(Map.Height/2, Map.Width/2);
+    private static readonly Player player = new Player(map);
     private readonly FpsCounter _fpsCounter = new FpsCounter();
     private readonly Renderer _renderer = new Renderer(map, player, WolfViewportWidth, WolfViewportHeight);
     private readonly SKBitmap _bitmap = new SKBitmap(WolfViewportWidth, WolfViewportHeight);
+
+    private int currentCount = 0;
+    private string? lastPressed;
+    private ElementReference buttonRef;
+
+    private void IncrementCount()
+    {
+        currentCount++;
+    }
+
+    private void KeyDown(KeyboardEventArgs e)
+    {
+        var pressedKey = e.Key;
+        lastPressed = pressedKey;
+        pressedKey = pressedKey.ToLower();
+        switch (pressedKey)
+        {
+            case "arrowup":
+            case "w":
+                {
+                    player.Move(0, -1);
+                    break;
+                }
+            case "arrowdown":
+            case "s":
+                {
+                    player.Move(0, 1);
+                    break;
+                }
+            case "arrowleft":
+            case "a":
+                {
+                    player.Move(-1, 0);
+                    break;
+                }
+            case "arrowright":
+            case "d":
+                {
+                    player.Move(1, 0);
+                    break;
+                }
+            default:
+                {
+                    break;
+                }
+
+        }
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await buttonRef.FocusAsync();
+        }
+    }
     
     protected void OnPaintSurface(SKPaintSurfaceEventArgs e)
     {
