--- a/NeaProject/Pages/Index.razor.css
+++ b/NeaProject/Pages/Index.razor.css
@@ -9,6 +9,13 @@
     height: 64px;
 }
 
+.massive-invisible-button {
+    width: 100%;
+    height: 100%;
+    background-color: #595f;
+    box-sizing: border-box;
+}
+
 .table-center {
     margin-left: auto;
     margin-right: auto;
