--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -6,13 +6,11 @@
 @using NeaProject.Classes;
 
 <div style="background-color:#955">
-    <div class="container center">
-        <div class="row">
-            <div class="canvas-container">
-                <SKCanvasView OnPaintSurface="OnPaintSurface" IgnorePixelScaling="true" EnableRenderLoop="true" />
-            </div>
-        </div>
-    </div>
+                <SKCanvasView 
+                    OnPaintSurface="OnPaintSurface" 
+                    IgnorePixelScaling="true"
+                    EnableRenderLoop="true" 
+                    style="width:640px; height:320px; margin:auto; display:block"/>
 </div>
 
 <div style="background-color:#559">
@@ -63,8 +61,8 @@
     // slowdown I saw. But 2D canvas is fine - after all, just a 2D game.
 
     const int WolfViewportZoom = 1;
-    const int WolfViewportWidth = 320 * WolfViewportZoom;
-    const int WolfViewportHeight = 160 * WolfViewportZoom;
+    const int WolfViewportWidth = 640 * WolfViewportZoom;
+    const int WolfViewportHeight = 320 * WolfViewportZoom;
 
     private static readonly Map map = new Map();
     private static readonly Player player = new Player(map);
