--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -4,6 +4,7 @@
 @using SkiaSharp;
 @using SkiaSharp.Views.Blazor;
 @using NeaProject.Classes;
+@using System.Drawing;
 
 <div style="background-color:#955">
                 <SKCanvasView 
@@ -66,8 +67,16 @@
 
     private static readonly Map map = new Map();
     private static readonly Player player = new Player(map);
+    private static readonly Dictionary<char, Sprite> _sprites = new Dictionary<char, Sprite>()
+    {
+        { 'g', new Sprite(Color.Green, "Grass")},
+        { 'p', new Sprite(Color.Pink, "Player")},
+        { 'r', new Sprite(Color.LightGray, "Rock")},
+        { 's', new Sprite(Color.LightGoldenrodYellow, "Sand")},
+        { 'w', new Sprite(Color.CornflowerBlue, "Water")}
+    };
     private readonly FpsCounter _fpsCounter = new FpsCounter();
-    private readonly Renderer _renderer = new Renderer(map, player, WolfViewportWidth, WolfViewportHeight);
+    private readonly Renderer _renderer = new Renderer(map, player, _sprites, WolfViewportWidth, WolfViewportHeight);
     private readonly SKBitmap _bitmap = new SKBitmap(WolfViewportWidth, WolfViewportHeight);
 
     private int currentCount = 0;
