Added map-data folder, changed player sprite

--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -65,38 +65,38 @@
     const int ViewportWidth = 640 * ViewportZoom;
     const int ViewportHeight = 320 * ViewportZoom;
     const string PlayerSprite = @"
-................kkkkkkkkkk......
-...kkkkkkk...kkkkkkkkkkkkkkk....
-.kkkkkkkkkkkkkkkkkkkkkkkkkkkkkk.
-kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk.
-kkkkkkkkkkkkkkkkkkkkkkkkkk....k.
-kkk...kkkkkkkkkkkkkkkkkkk.......
-k...kkkkkkkkkkkkkkkkkkkkkkk.....
-...kkkkkkkkkkkkkkkkkkkkkkkkkk...
-..kkkkkkkkkkkkkkkkkkkkkkkkkkkk..
-..kkkkkkkkkkkkkkkkkpppppkkkkkk..
-.kkkkkkkkkkkkkkkppppppppppkkkkk.
-.kkkkkkkkkkkkkpppppppppppppkkkk.
-.kkkkkkkkkkkpppppppppwwpppppkkk.
-.kkkkkkkkkwppppppppppwwppppppkk.
-kkppkkkkkkbppppppppppbbpppppppkk
-kpppkkkkkbbppppppppppbbppppppppk
-kppppkkkkbbppppppppppbbppppppppp
-ppppppkkpbbppppppppppbbppppppppp
-ppppppkkpkkppppppppppkkppppppppp
-ppppppkkpkkppppppppppkkppppppppp
-pppppppkpppppppppppppppppppppppp
-.pppprrrpppppppppppppppprrrpppp.
-.pppppppppppppppppppppppppppppp.
-..ppppppppppppkppkpppppppppppp..
-..pppppppppppppkkppppppppppppp..
-...pppppppppppppppppppppppppp...
-...pppppppppppppppppppppppppp...
-....pppppppppppppppppppppppp....
-.rrrrrrrpppppppppppppprrrrrrrr..
-rrrrrrrrrrrpppppppppprrrrrrrrrrr
-rrrrrrrrrrrrrrrpprrrrrrrrrrrrrrr
-..rrrrrrrrrrrr....rrrrrrrrrrrr..";
+................................
+................................
+...........bbbb.................
+..........bbbbbbbuup............
+.........bbmbbuubbuup...........
+........bpmbbuuuhbbuub..........
+........ppbbuuuhshbbuub.........
+........pmbuuuhssshbbub.........
+.......bpbuuuessssehbbu.........
+.......pbuuhhesssseshsu.........
+.......pbuusssshhssssb..........
+.......mbubssssssssssb..b.......
+........bbubhsssssssubbb........
+........bb.bbbhsssubuub.........
+.........b...mhhhhm.............
+...........mmpmmmmpmm...........
+..........mppppppppppm..........
+.........mppppppppppppm.........
+.........mppppppppppppm.........
+........mpppmppppppmpppm........
+........mpppmppppppmpppm........
+........mppmppppppppmppm........
+........mppmppppppppmppm........
+........mppmppppppppmppm........
+.........mmdmmmmmmmmdmm.........
+...........dddddddddd...........
+...........drrrrdrrrd...........
+...........drrrrdrrrd...........
+...........ddrrrdrrdd...........
+...........drrrrdrrrd...........
+..........eeeeekkkeeee..........
+..........eeeekkkkkeee..........";
 
     private Map? map;
     private Player? player;
