Added a button only on mobile

--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -76,6 +76,12 @@
     </button>
 </div>
 
+<div class="d-lg-none">
+    <button>
+        up
+    </button>
+</div>
+
 
 @code {
     // Worth noting that the renderer is about 50% slower when you use Web GL. My assumption is that you end up
