Sprites now can be sets of sprites as well, and the player now faces in the direction they are moving

--- a/NeaProject/Pages/Index.razor
+++ b/NeaProject/Pages/Index.razor
@@ -112,39 +112,6 @@
     const int ViewportZoom = 1;
     const int ViewportWidth = 640 * ViewportZoom;
     const int ViewportHeight = 320 * ViewportZoom;
-    const string PlayerSprite = @"
-................................
-................................
-...........bbbb.................
-..........bbbbbbbuup............
-.........bbmbbuubbuup...........
-........bpmbbuuuhbbuub..........
-........ppbbuuuhshbbuub.........
-........pmbuuuhssshbbub.........
-.......bpbuuuessssehbbu.........
-.......pbuuhhesssseshsu.........
-.......pbuusssshhssssb..........
-.......mbubssssssssssb..b.......
-........bbubhsssssssubbb........
-........bb.bbbhsssubuub.........
-.........b...mhhhhm.............
-...........mmpmmmmpmm...........
-..........mppppppppppm..........
-.........mppppppppppppm.........
-.........mppppppppppppm.........
-........mpppmppppppmpppm........
-........mpppmppppppmpppm........
-........mppmppppppppmppm........
-........mppmppppppppmppm........
-........mppmppppppppmppm........
-.........mmdmmmmmmmmdmm.........
-...........dddddddddd...........
-...........drrrrdrrrd...........
-...........drrrrdrrrd...........
-...........ddrrrdrrdd...........
-...........drrrrdrrrd...........
-..........eeeeekkkeeee..........
-..........eeeekkkkkeee..........";
 
     private Map? _map;
     private Player? _player;
@@ -153,8 +120,6 @@
     private Renderer? _renderer;
     private SKBitmap? _bitmap;
     private List<Npc> _npcs = new();
-    private string _playerName = "";
-
     private int currentCount = 0;
     private string? lastPressed;
     private ElementReference buttonRef;
@@ -182,6 +147,7 @@
         {
             return;
         }
+        _player.FrameIndex = 3;
         _player.Move(_map, 0, -1); 
     }
     private void MoveRight()
@@ -190,6 +156,7 @@
         {
             return;
         }
+        _player.FrameIndex = 1;
         _player.Move(_map, 1, 0);
     }
     private void MoveDown()
@@ -198,6 +165,7 @@
         {
             return;
         }
+        _player.FrameIndex = 0;
         _player.Move(_map, 0, 1);
     }
     private void MoveLeft()
@@ -206,6 +174,7 @@
         {
             return;
         }
+        _player.FrameIndex = 2;
         _player.Move(_map, -1, 0);
     }
 
@@ -275,12 +244,12 @@
         _sprites = new Dictionary<char, Sprite?>()
         {
             { '.', null},
-            { 'd', new Sprite(mapTileSheet, "Diamond")},
-            { 'g', new Sprite(mapTileSheet, "Grass")},
-            { 'p', new Sprite(PlayerSprite, "Player")},
-            { 'r', new Sprite(mapTileSheet, "Rock")},
-            { 's', new Sprite(mapTileSheet, "Sand")},
-            { 'w', new Sprite(mapTileSheet, "Water")}
+            { 'd', new Sprite(mapTileSheet, "Diamond", 1)},
+            { 'g', new Sprite(mapTileSheet, "Grass", 1)},
+            { 'p', new Sprite(mapTileSheet, "Player", 4)},
+            { 'r', new Sprite(mapTileSheet, "Rock", 1)},
+            { 's', new Sprite(mapTileSheet, "Sand", 1)},
+            { 'w', new Sprite(mapTileSheet, "Water", 1)}
         };
 
         _fpsCounter = new FpsCounter();
